infrastructure/k8s/09-payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
  labels:
    app: payment-service
    app.kubernetes.io/name: payment-service
    app.kubernetes.io/part-of: vaultcore-platform
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: payment-service
          image: vaultcore/payment-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3003
          resources:
            requests:
              cpu: 150m
              memory: 192Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 2
        - name: outbox-worker
          image: vaultcore/payment-service:latest
          imagePullPolicy: IfNotPresent
          command:
            - "node"
            - "src/workers/outboxWorkerRunner.js"
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    app: payment-service
    app.kubernetes.io/name: payment-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3003
      targetPort: 3003
  selector:
    app: payment-service
